--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,14 @@
     "private": true,
     "type": "module",
     "dependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "axios": "^1.6.0",
+        "framer-motion": "^10.16.5",
+        "lucide-react": "^0.292.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "axios": "^1.6.0",
-        "lucide-react": "^0.292.0",
         "react-hot-toast": "^2.4.1",
-        "framer-motion": "^10.16.5"
+        "react-markdown": "^10.1.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.37",
