--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "axios": "^1.6.0",
         "framer-motion": "^10.16.5",
         "lucide-react": "^0.292.0",
+        "openai": "^5.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
